feat(search): add product search api
